--- a/src/css/style.less
+++ b/src/css/style.less
@@ -1,4 +1,33 @@
-#mg {
+#mg.container {
     border-color: black;
     border: 5px;
+}
+h3{
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    font-size: 4em;
+    margin-bottom: .4em;
+}
+
+button, input, optgroup, select, textarea {
+    margin-bottom: 5px;
+}
+
+body {
+    background-color: rgb(39, 140, 76);
+    border-radius: 5px;
+    margin-top: 15vh;
+    margin-bottom: 15vh;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 2em;
+    padding: 2px;
+}
+
+#output{
+    margin-top: 5em;
+    color: white;
+}
+#output::after{
+    margin-top: 5em;
+    color: white;
 }
